# idealista-api

./: .gitignore  LICENSE  README.md  idealista_client.py  pyproject.toml  utils.py
docs/: client.md  property.md  response.md  search.md
examples/: example_config.ini  main.ipynb  test.py
idealista_api/: __init__.py  client.py  exceptions.py  models.py  utils.py
